--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
       referrerpolicy="no-referrer"
     />
     <style>
-      @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=Orbitron:wght@400;500&display=swap');
+      @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=Orbitron:wght@500&display=swap');
       </style>
   </head>
   <body>
